[gd_scene load_steps=70 format=2]

[ext_resource path="res://Scripts/Boss_Fire.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy_Fier/01_demon_idle/demon_idle_5.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemy_Fier/01_demon_idle/demon_idle_4.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemy_Fier/01_demon_idle/demon_idle_2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemy_Fier/01_demon_idle/demon_idle_3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemy_Fier/01_demon_idle/demon_idle_6.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemy_Fier/01_demon_idle/demon_idle_1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_12.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_8.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_11.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Enemy_Fier/02_demon_walk/demon_walk_2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_7.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Enemy_Fier/02_demon_walk/demon_walk_7.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_15.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_10.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_15.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_22.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_5.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_4.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_7.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_4.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_8.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Enemy_Fier/02_demon_walk/demon_walk_5.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Enemy_Fier/02_demon_walk/demon_walk_4.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_13.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_14.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_19.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_10.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_2.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_1.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_13.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_11.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_17.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_5.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_20.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_1.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Enemy_Fier/02_demon_walk/demon_walk_1.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_3.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Enemy_Fier/02_demon_walk/demon_walk_10.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_12.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Enemy_Fier/02_demon_walk/demon_walk_12.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Enemy_Fier/02_demon_walk/demon_walk_6.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_18.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_2.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Enemy_Fier/02_demon_walk/demon_walk_8.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_9.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_16.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Enemy_Fier/02_demon_walk/demon_walk_11.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_9.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_21.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_14.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Enemy_Fier/05_demon_death/demon_death_6.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_6.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Enemy_Fier/03_demon_cleave/demon_cleave_3.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Enemy_Fier/02_demon_walk/demon_walk_3.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Enemy_Fier/02_demon_walk/demon_walk_9.png" type="Texture" id=56]
[ext_resource path="res://Sound/bullet.wav" type="AudioStream" id=57]
[ext_resource path="res://Sound/442769__qubodup__sword-hit.wav" type="AudioStream" id=58]
[ext_resource path="res://Sound/547600__herkules92__sword-attack.wav" type="AudioStream" id=59]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 20.5, 28.0172 )

[sub_resource type="Animation" id=11]
resource_name = "New Anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 44 ), ExtResource( 38 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 52 ), ExtResource( 12 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 30 ), ExtResource( 29 ), ExtResource( 54 ), ExtResource( 19 ), ExtResource( 34 ), ExtResource( 53 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 46 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 31 ), ExtResource( 51 ), ExtResource( 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hit/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hit/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -85, 65 ), Vector2( -34, 65 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "demon"
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 36 ), ExtResource( 44 ), ExtResource( 38 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 52 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 49 ), ExtResource( 28 ), ExtResource( 32 ), ExtResource( 40 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 14 ), ExtResource( 47 ), ExtResource( 33 ), ExtResource( 43 ), ExtResource( 27 ), ExtResource( 35 ), ExtResource( 50 ), ExtResource( 17 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.890196, 0.156863, 0.156863, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 37 ), ExtResource( 11 ), ExtResource( 55 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 42 ), ExtResource( 13 ), ExtResource( 45 ), ExtResource( 56 ), ExtResource( 39 ), ExtResource( 48 ), ExtResource( 41 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 25.5, 13.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 36.5, 32.75 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 28.4961
height = 9.87969

[node name="Boss_Fire" type="KinematicBody2D"]
collision_layer = 31
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, 46.5 )
scale = Vector2( 1, 1.16 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
"anims/New Anim" = SubResource( 11 )
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/demon = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
process_priority = 1
position = Vector2( 0, 36 )
rotation = 1.5708
scale = Vector2( 1, 0.899 )
enabled = true
collision_mask = 16

[node name="shoot_timer" type="Timer" parent="."]

[node name="Rotater" type="Node2D" parent="."]

[node name="Hit" type="Area2D" parent="." groups=["ice"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit"]
position = Vector2( -85, 65 )
shape = SubResource( 8 )
disabled = true

[node name="player_detcotor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detcotor"]
position = Vector2( -67, 44.75 )
shape = SubResource( 9 )

[node name="body" type="Area2D" parent="." groups=["body_fire"]]
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
position = Vector2( 0, 42 )
scale = Vector2( 1.22824, 1.40567 )
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
process_mode = 0
wait_time = 2.0

[node name="firt" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="dragh" type="Timer" parent="."]
wait_time = 2.1

[node name="buller" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 57 )
pitch_scale = 0.53

[node name="hiiitt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 59 )

[node name="sowrd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 58 )

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="Hit" to="." method="_on_Hit_body_entered"]
[connection signal="body_entered" from="player_detcotor" to="." method="_on_player_detcotor_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="firt" to="." method="_on_firt_timeout"]
[connection signal="timeout" from="dragh" to="." method="_on_dragh_timeout"]
